--- a/package.json
+++ b/package.json
@@ -2,14 +2,18 @@
   "name": "youtube-backend",
   "version": "1.0.0",
   "description": "A try at Youtube Backend",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon src/index.js"
   },
   "keywords": [
     "javascript",
     "backend"
   ],
   "author": "Md Amiruddin",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "nodemon": "^3.1.0"
+  }
 }
